[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/bg.gd" type="Script" id=1]
[ext_resource path="res://worlds/bgs/city/bg2_960x540.png" type="Texture" id=2]
[ext_resource path="res://worlds/bgs/city/bg0_960x540.png" type="Texture" id=3]
[ext_resource path="res://worlds/bgs/city/bg1_960x540.png" type="Texture" id=4]

[node name="city_bg" type="Position2D"]
script = ExtResource( 1 )

[node name="bg0" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="bg1_1" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="bg1_2" type="Sprite" parent="."]
position = Vector2( 960, 0 )
texture = ExtResource( 4 )

[node name="bg2_1" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="bg2_2" type="Sprite" parent="."]
position = Vector2( 960, 0 )
texture = ExtResource( 2 )
